bugs squished

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -52,7 +52,7 @@
 
   .profile-section {
     position: absolute;
-    top: 50%;
+    top: 1%;
     left: 55%;
     vertical-align: top;
 
